--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -3,4 +3,10 @@
     <external-path
         name="real_estate_manager_image"
         path="Android/data/com.openclassrooms.realestatemanager/files/Pictures" />
+    <cache-path
+        name="cached_files"
+        path="." />
+    <files-path
+        name="images"
+        path="." />
 </paths>
