- update address_layout.xml -> add multiline text to address
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -19,12 +19,15 @@
             android:id="@+id/address_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:maxLines="3"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginEnd="@dimen/marginEnd"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/address"
             android:focusable="false"
-            android:inputType="textPostalAddress"
+            android:minLines="2"
+            android:scrollbars="vertical"
             android:text="@={property.address1}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
