--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -59,6 +59,7 @@
             android:text="@{property.city}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/address2_text_input" />
 
@@ -69,6 +70,7 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/state"
+            android:visibility="gone"
             android:inputType="textPostalAddress"
             android:text="@={property.state}"
             android:textSize="@dimen/textSize"
@@ -77,6 +79,7 @@
             app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
         <com.google.android.material.textfield.TextInputEditText
+            android:visibility="gone"
             android:id="@+id/zipcode_text_input"
             android:layout_width="110dp"
             android:layout_height="wrap_content"
@@ -91,6 +94,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/country_text_input"
+            android:visibility="gone"
             android:layout_width="@dimen/formWidth"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
@@ -105,6 +109,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/area_text_input"
+            android:visibility="gone"
             android:layout_width="@dimen/formWidth"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
