- update : put property_detail.xml Address argument to an AddressEntity.kt model
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -28,7 +28,7 @@
             android:focusable="false"
             android:minLines="2"
             android:scrollbars="vertical"
-            android:text="@={property.address1}"
+            android:text="@={property.address.address1}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/address2"
             android:inputType="textPostalAddress"
-            android:text="@{property.address2}"
+            android:text="@{property.address.address2}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/city"
             android:inputType="text"
-            android:text="@{property.city}"
+            android:text="@{property.address.city}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             android:visibility="gone"
@@ -72,7 +72,7 @@
             android:hint="@string/state"
             android:visibility="gone"
             android:inputType="textPostalAddress"
-            android:text="@={property.state}"
+            android:text="@={property.address.state}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
