--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -100,7 +100,7 @@
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="16dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{property.address1}"
+                    android:text="@{property.address.address1}"
                     android:textIsSelectable="true"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{@string/address2_layout(property.area,property.city, property.state, property.zipCode)}"
+                    android:text="@{@string/address2_layout(property.address.area,property.address.city, property.address.state, property.address.zipCode)}"
                     android:textIsSelectable="true"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
