--- a/app/src/main/res/layout/property_list_content.xml
+++ b/app/src/main/res/layout/property_list_content.xml
@@ -60,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                android:text="@{property.area}"
+                android:text="@{property.address.area}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 app:layout_constraintBottom_toTopOf="@id/text_price"
                 app:layout_constraintEnd_toEndOf="parent"
