--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -23,6 +23,25 @@
             android:layout_marginTop="@dimen/marginTop"
             android:layout_marginEnd="@dimen/marginEnd"
             android:focusable="false"
+            android:drawableStart="@drawable/ic_search_24dp"
+            android:inputType="textMultiLine"
+            android:maxLines="3"
+            android:minLines="2"
+            android:scrollbars="vertical"
+            android:hint="@string/search_an_address"
+            android:textSize="@dimen/textSize"
+            app:endIconMode="clear_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/address1_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marginStart"
+            android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
+            android:focusable="false"
             android:hint="@string/address"
             android:inputType="textMultiLine"
             android:maxLines="3"
@@ -32,7 +51,7 @@
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/address_text_input" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/address2_text_input"
@@ -42,11 +61,11 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/address2"
             android:inputType="textPostalAddress"
-            android:text="@{property.address.address2}"
+            android:text="@={property.address.address2}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/address_text_input" />
+            app:layout_constraintTop_toBottomOf="@id/address1_text_input" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/city_text_input"
@@ -56,9 +75,8 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/city"
             android:inputType="text"
-            android:text="@{property.address.city}"
+            android:text="@={property.address.city}"
             android:textSize="@dimen/textSize"
-            android:visibility="gone"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/address2_text_input" />
@@ -73,7 +91,6 @@
             android:inputType="textPostalAddress"
             android:text="@={property.address.state}"
             android:textSize="@dimen/textSize"
-            android:visibility="gone"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/city_text_input" />
@@ -87,7 +104,7 @@
             android:hint="@string/zipcode"
             android:inputType="number"
             android:textSize="@dimen/textSize"
-            android:visibility="gone"
+            android:text="@={``+property.address.zipCode}"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toEndOf="@id/state_text_input"
             app:layout_constraintTop_toBottomOf="@id/city_text_input" />
@@ -100,7 +117,7 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/country"
             android:inputType="text"
-            android:text="@string/united_state"
+            android:text="@={property.address.country}"
             android:textSize="@dimen/textSize"
             android:visibility="gone"
             app:endIconMode="clear_text"
@@ -116,7 +133,7 @@
             android:hint="@string/area"
             android:inputType="text"
             android:textSize="@dimen/textSize"
-            android:visibility="gone"
+            android:text="@={property.address.area}"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/country_text_input" />
