- correct some bugs
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -16,6 +16,10 @@
             type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
 
         <variable
+            name="address"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Address" />
+
+        <variable
             name="clickListener"
             type="android.view.View.OnClickListener" />
     </data>
