--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -51,6 +51,9 @@
         <action
             android:id="@+id/action_addPropertyFragment_to_propertyListFragment"
             app:destination="@id/propertyListFragment" />
+        <action
+            android:id="@+id/action_addPropertyFragment_to_itemTabsFragment2"
+            app:destination="@id/itemTabsFragment2" />
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
