--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -324,16 +325,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/nearby" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/static_map_view"
+                <fragment
+                    android:id="@+id/lite_map_view"
+                    android:name="com.google.android.gms.maps.MapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:paddingBottom="60dp"
+                    android:layout_height="400dp"
+                    android:layout_marginBottom="60dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/location_text" />
+                    app:layout_constraintTop_toBottomOf="@id/location_text"
+                    map:cameraZoom="13"
+                    map:liteMode="true"
+                    map:mapType="normal" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
