--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -324,14 +325,14 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/nearby" />
 
-                <fragment
-                    class="com.google.android.gms.maps.SupportMapFragment"
+                <com.google.android.gms.maps.MapView
                     android:id="@+id/lite_map_view"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/location_text"
                     android:layout_width="match_parent"
-                    android:layout_height="350dp" />
-
+                    android:layout_height="300dp"
+                    app:layout_constraintTop_toBottomOf="@id/location_text"
+                    map:cameraZoom="13"
+                    app:layout_constraintStart_toStartOf="parent"
+                    map:liteMode="true" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
