--- a/app/src/main/res/layout/dates_layout.xml
+++ b/app/src/main/res/layout/dates_layout.xml
@@ -60,12 +60,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sell_input_layout" />
 
+
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/sold_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="@{property.sold}"
             android:layout_marginStart="@dimen/marginStart"
-            android:checked="@={property.sold}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switch_title" />
 
@@ -76,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:text="@string/sold_since"
-            android:visibility="@{property.sold ? View.VISIBLE: View.GONE}"
+            isVisible="@{property.sold}"
             app:layout_constraintStart_toStartOf="@id/sold_input_layout"
             app:layout_constraintTop_toBottomOf="@+id/sell_input_layout" />
 
@@ -87,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginEnd="@dimen/marginEnd"
-            android:visibility="@={property.sold ? View.VISIBLE: View.GONE}"
+            isVisible="@{property.sold}"
             app:layout_constraintStart_toEndOf="@id/sold_switch"
             app:layout_constraintTop_toBottomOf="@id/sold_title"
             app:layout_goneMarginEnd="@dimen/marginEnd">
@@ -97,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sold_date"
+                dateToText="@{property.soldDate}"
                 android:inputType="textAutoComplete"
                 android:labelFor="@id/sold_input_layout" />
         </com.google.android.material.textfield.TextInputLayout>
