- update mobile_navigation.xml with  EDIT_PROPERTY_VIEW to switch between edit and add property
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,6 +35,10 @@
             android:name="item_id"
             android:defaultValue=""
             app:argType="string" />
+        <argument
+            android:name="EDIT_PROPERTY_VIEW"
+            android:defaultValue="false"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/addPropertyFragment"
