--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -11,28 +11,8 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/address_text_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginStart"
-            android:layout_marginTop="@dimen/marginTop"
-            android:layout_marginEnd="@dimen/marginEnd"
-            android:focusable="false"
-            android:drawableStart="@drawable/ic_search_24dp"
-            android:inputType="textMultiLine"
-            android:maxLines="3"
-            android:minLines="2"
-            android:scrollbars="vertical"
-            android:hint="@string/search_an_address"
-            android:textSize="@dimen/textSize"
-            app:endIconMode="clear_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/address1_text_input"
@@ -42,13 +22,14 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/address"
             android:inputType="textMultiLine"
+            android:text="@{property.address.address1}"
             android:maxLines="3"
             android:minLines="2"
             android:scrollbars="vertical"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/address_text_input" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/address2_text_input"
@@ -56,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
+            android:text="@{property.address.address2}"
             android:hint="@string/address2"
             android:inputType="textPostalAddress"
             android:textSize="@dimen/textSize"
@@ -69,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
+            android:text="@{property.address.city}"
             android:hint="@string/city"
             android:inputType="text"
             android:textSize="@dimen/textSize"
@@ -83,6 +66,7 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/state"
+            android:text="@{property.address.state}"
             android:inputType="textPostalAddress"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
@@ -91,14 +75,15 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/zipcode_text_input"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
+            intToText="@{property.address.zipCode}"
+            android:layout_width="112dp"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/zipcode"
             android:inputType="number"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
+            android:layout_height="41dp"
             app:layout_constraintStart_toEndOf="@id/state_text_input"
             app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
@@ -109,6 +94,7 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/country"
+            android:text="@{property.address.country}"
             android:inputType="text"
             android:textSize="@dimen/textSize"
             android:visibility="gone"
@@ -124,6 +110,7 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/area"
             android:inputType="text"
+            android:text="@{property.address.area}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
