- update point_of_interest_layout.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/description_layout.xml
+++ b/app/src/main/res/layout/description_layout.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="@dimen/marginTop"
             android:layout_marginEnd="@dimen/marginEnd"
             android:hint="@string/description"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:maxLength="512"
             android:text="@={property.description}"
             android:textSize="@dimen/textSize"
