- update DateUtil.kt & add Converter.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/surface"
+            intToText="@={property.surface}"
             android:inputType="number"
             android:maxLength="4"
             android:textSize="@dimen/textSize"
