- update Converter.kt & address_layout.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="com.openclassrooms.realestatemanager.utils.converter.Converter" />
 
         <import type="android.view.View" />
-
         <variable
             name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
