--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -8,6 +8,10 @@
             name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
 
+        <import type="android.view.View" />
+
+        <import type="com.openclassrooms.realestatemanager.utils.converter.Converter" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,10 +26,10 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/address"
             android:inputType="textMultiLine"
-            android:text="@{property.address.address1}"
             android:maxLines="3"
             android:minLines="2"
             android:scrollbars="vertical"
+            android:text="@{property.address.address1}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
-            android:text="@{property.address.address2}"
             android:hint="@string/address2"
             android:inputType="textPostalAddress"
+            android:text="@{property.address.address2}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,9 +55,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
-            android:text="@{property.address.city}"
             android:hint="@string/city"
             android:inputType="text"
+            android:text="@{property.address.city}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +70,8 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/state"
-            android:text="@{property.address.state}"
             android:inputType="textPostalAddress"
+            android:text="@{property.address.state}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,15 +79,15 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/zipcode_text_input"
-            intToText="@{property.address.zipCode}"
             android:layout_width="112dp"
+            android:layout_height="41dp"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/zipcode"
             android:inputType="number"
+            android:text="@={Converter.intToString(zipcodeTextInput,property.address.zipCode,property.address.zipCode) }"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
-            android:layout_height="41dp"
             app:layout_constraintStart_toEndOf="@id/state_text_input"
             app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
@@ -94,8 +98,8 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/country"
-            android:text="@{property.address.country}"
             android:inputType="text"
+            android:text="@{property.address.country}"
             android:textSize="@dimen/textSize"
             android:visibility="gone"
             app:endIconMode="clear_text"
