--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -16,64 +16,79 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/surfaceTextInput"
-            android:layout_width="wrap_content"
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/edit_linear"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginStart"
-            android:layout_marginTop="@dimen/marginTop"
-            android:hint="@string/surface"
-            android:text="@={Converter.intToString(surfaceTextInput,property.surface,property.surface)}"
-            android:inputType="number"
-            android:maxLength="4"
-            android:textSize="@dimen/textSize"
-            app:endIconMode="clear_text"
-            app:layout_constraintEnd_toStartOf="@id/number_of_room_text_input"
+            android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/number_of_room_text_input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginStart"
-            android:layout_marginTop="@dimen/marginTop"
-            android:hint="@string/rooms"
-            android:inputType="number"
-            android:textSize="@dimen/textSize"
-            app:endIconMode="clear_text"
-            app:layout_constraintEnd_toStartOf="@id/number_of_bedroom_text_input"
-            app:layout_constraintStart_toEndOf="@id/surface_text_input"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/surfaceTextInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:hint="@string/surface"
+                android:inputType="number"
+                android:maxLength="4"
+                android:text="@={Converter.intToString(surfaceTextInput,property.surface,property.surface)}"
+                android:textSize="@dimen/textSize"
+                app:drawableTopCompat="@drawable/ic_square_foot_24dp"
+                app:endIconMode="clear_text"
+                app:layout_constraintEnd_toStartOf="@id/number_of_room_text_input"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/number_of_bedroom_text_input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginStart"
-            android:layout_marginTop="@dimen/marginTop"
-            android:hint="@string/bedrooms"
-            android:inputType="number"
-            android:textSize="@dimen/textSize"
-            app:endIconMode="clear_text"
-            app:layout_constraintEnd_toStartOf="@id/number_of_bathroom_text_input"
-            app:layout_constraintStart_toEndOf="@id/number_of_room_text_input"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/number_of_room_text_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:hint="@string/rooms"
+                android:inputType="number"
+                android:textSize="@dimen/textSize"
+                app:drawableTopCompat="@drawable/ic_room_24dp"
+                app:endIconMode="clear_text"
+                app:layout_constraintEnd_toStartOf="@id/number_of_bedroom_text_input"
+                app:layout_constraintStart_toEndOf="@id/surface_text_input"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/number_of_bathroom_text_input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginStart"
-            android:layout_marginTop="@dimen/marginTop"
-            android:layout_marginEnd="@dimen/marginEnd"
-            android:hint="@string/bathroom"
-            android:inputType="number"
-            android:textSize="@dimen/textSize"
-            app:endIconMode="clear_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_input"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/number_of_bedroom_text_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:hint="@string/bedrooms"
+                android:inputType="number"
+                android:textSize="@dimen/textSize"
+                app:drawableTopCompat="@drawable/ic_bedroom_parent_24dp"
+                app:endIconMode="clear_text"
+                app:layout_constraintEnd_toStartOf="@id/number_of_bathroom_text_input"
+                app:layout_constraintStart_toEndOf="@id/number_of_room_text_input"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/number_of_bathroom_text_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:hint="@string/bathroom"
+                android:inputType="number"
+                android:textSize="@dimen/textSize"
+                app:drawableTopCompat="@drawable/ic_bathroom_24dp"
+                app:endIconMode="clear_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_input"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
