--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -34,7 +34,7 @@
                 android:hint="@string/surface"
                 android:inputType="number"
                 android:maxLength="4"
-                android:text="@={Converter.intToString(surfaceTextInput,property.surface,property.surface)}"
+                android:text="@={``+property.surface}"
                 android:textSize="@dimen/textSize"
                 app:drawableTopCompat="@drawable/ic_square_foot_24dp"
                 app:endIconMode="clear_text"
