--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -17,81 +17,119 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/edit_linear"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/surfaceTextLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginStart="@dimen/marginStart"
+            android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
+            android:layout_marginBottom="@dimen/marginTop"
+            android:hint="@string/surface"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toStartOf="@id/numberOfRoomLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/surfaceTextInput"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:hint="@string/surface"
-                android:inputType="number"
                 android:maxLength="4"
-                android:text="@={``+property.surface}"
+                android:text="@{`` + property.surface}"
                 android:textSize="@dimen/textSize"
-                app:drawableTopCompat="@drawable/ic_square_foot_24dp"
-                app:endIconMode="clear_text"
-                app:layout_constraintEnd_toStartOf="@id/number_of_room_text_input"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:drawableStartCompat="@drawable/ic_square_foot_24dp"
+                app:endIconMode="clear_text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/numberOfRoomLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marginStart"
+            android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
+            android:layout_marginBottom="@dimen/marginTop"
+            android:hint="@string/rooms"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/surfaceTextLayout"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/number_of_room_text_input"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:hint="@string/rooms"
+                android:layout_weight="0.5"
                 android:inputType="number"
+                android:text="@{`` + property.roomNumber}"
                 android:textSize="@dimen/textSize"
-                android:text="@={Converter.intToString(surfaceTextInput,property.roomNumber,property.roomNumber)}"
-                app:drawableTopCompat="@drawable/ic_room_24dp"
-                app:endIconMode="clear_text"
-                app:layout_constraintEnd_toStartOf="@id/number_of_bedroom_text_input"
-                app:layout_constraintStart_toEndOf="@id/surface_text_input"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:drawableStartCompat="@drawable/ic_room_24dp"
+                app:endIconMode="clear_text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/number_of_bedroom_text_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marginStart"
+            android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
+            android:layout_marginBottom="@dimen/marginTop"
+            android:layout_weight="0.5"
+            android:hint="@string/bedrooms"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toStartOf="@id/bathroomsLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/surfaceTextLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/number_of_bedroom_text_input"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:hint="@string/bedrooms"
                 android:inputType="number"
+                android:text="@{`` + property.bedroomNumber}"
                 android:textSize="@dimen/textSize"
-                app:drawableTopCompat="@drawable/ic_bedroom_parent_24dp"
-                app:endIconMode="clear_text"
-                android:text="@={Converter.intToString(surfaceTextInput,property.bedroomNumber,property.bedroomNumber)}"
-                app:layout_constraintEnd_toStartOf="@id/number_of_bathroom_text_input"
-                app:layout_constraintStart_toEndOf="@id/number_of_room_text_input"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/bathroomsLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marginStart"
+            android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
+            android:layout_marginBottom="@dimen/marginTop"
+            android:layout_weight="0.5"
+            android:hint="@string/bathroom"
+            android:inputType="number"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_layout"
+            app:layout_constraintTop_toBottomOf="@id/numberOfRoomLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/number_of_bathroom_text_input"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
-                android:hint="@string/bathroom"
+                android:layout_gravity="center"
                 android:inputType="number"
+                android:text="@{`` + property.bathroomNumber}"
                 android:textSize="@dimen/textSize"
-                android:text="@={Converter.intToString(surfaceTextInput,property.bathroomNumber,property.bathroomNumber)}"
-                app:drawableTopCompat="@drawable/ic_bathroom_24dp"
-                app:endIconMode="clear_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_input"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
+                app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
