--- a/app/src/main/res/layout/description_layout.xml
+++ b/app/src/main/res/layout/description_layout.xml
@@ -16,14 +16,16 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/description_text_input"
+            style="@style/Widget.MaterialComponents.TextView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
-            android:layout_marginEnd="@dimen/marginEnd"
             android:hint="@string/description"
             android:inputType="textMultiLine"
             android:maxLength="512"
+            android:scrollbars="vertical"
+            android:scrollHorizontally="false"
             android:text="@={property.description}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
